--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
   "name": "zap",
   "version": "0.1.0",
-  "description": "",
   "private": true,
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "webpack --config ./webpack.dev.config.js & serve build -l 3000",
-    "build": "webpack && cp -a ./public/. ./build/",
-    "lint": "eslint src/"
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.1.4"
   },
-  "author": "Kyle Lin",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
-    "file-loader": "^1.1.11",
-    "gh-pages": "^1.2.0",
-    "serve": "^9.1.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^2.1.5",
-    "webpack-shell-plugin": "^0.5.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
