--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/standalone": "^7.0.0-beta.51",
     "brace": "^0.11.1",
     "react": "^16.4.1",
     "react-ace": "^6.1.1",
