--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-ace": "^6.1.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "string-similarity": "^1.2.0",
     "three": "^0.93.0"
   },
   "scripts": {
